--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -10,9 +10,11 @@ html {
   -webkit-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
   text-size-adjust: 100%;
+  overflow: hidden;
 }
 
 body {
+  overflow: hidden;
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
 }
